# fl

./: .hgtags  CMakeLists.txt  Config  Doxyfile  HISTORY  LICENSE  Makefile  README  TODO  changens.sh  changens.template  fl.sln  fl7.sln  log.txt  msvc.todo.txt
cmake/: FindBLASnofortran.cmake  FindFFMPEG.cmake  FindFFTW.cmake  FindFL.cmake  FindGTIF.cmake  FindLAPACKnofortran.cmake  FindLIBSVM.cmake  FindPthread.cmake
ideas/: README  jpg2eps.sh
include/fl/: AnnealingAdaptive.tcc  ConjugateGradient.tcc  Fourier.tcc  GradientDescent.tcc  LevenbergMarquardt.tcc  LevenbergMarquardtSparse.tcc  LevenbergMarquardtSparseBK.tcc  LineSearch.tcc  Matrix.tcc  Matrix2x2.tcc  Matrix3x3.tcc  MatrixBlock.tcc  MatrixBool.tcc  MatrixComplex.tcc  MatrixDiagonal.tcc  MatrixDouble.tcc  MatrixFixed.tcc  MatrixFixed22.tcc  MatrixFloat.tcc  MatrixIdentity.tcc  MatrixPacked.tcc  MatrixSparse.tcc  MatrixSparseBool.tcc  MemorySearch.tcc  NewtonRaphson.tcc  ParticleSwarm.tcc  SearchableNumeric.tcc  SearchableSparse.tcc  Vector.tcc  X.h  archive.h  binary.h  blasproto.h  canvas.h  cluster.h  color.h  complex.h  convolve.h  descriptor.h  endian.h  (+43 more)
mswin/: How to build support libraries.txt
mswin/include/: inttypes.h  stdint.h
script/: greplib  rmcore
src/X/: CMakeLists.txt  GLShow.cc  Makefile  SlideShow.cc  SlideShowForWindows.cc  X.cc  glx.cc  test.cc
src/base/: Archive.cc  CMakeLists.txt  Makefile  Metadata.cc  NamedValueSet.cc  Parameters.cc  Pointer.cc  Time.cc  base.vcproj  base7.vcproj  random.cc  test.cc  test.parms
src/image/: AbsoluteValue.cc  BlurDecimate.cc  CMakeLists.txt  Canvas.cc  CanvasImage.cc  CanvasPS.cc  ClearAlpha.cc  Comparison.cc  Convolution1D.cc  Convolution2D.cc  ConvolutionRecursive.cc  Decimate.cc  Descriptor.cc  DescriptorColorHistogram2D.cc  DescriptorColorHistogram3D.cc  DescriptorCombo.cc  DescriptorContrast.cc  DescriptorFilters.cc  DescriptorFiltersTexton.cc  DescriptorLBP.cc  DescriptorOrientation.cc  DescriptorOrientationHistogram.cc  DescriptorPatch.cc  DescriptorSIFT.cc  DescriptorScale.cc  DescriptorSchmid.cc  DescriptorSchmidScale.cc  DescriptorSpatialPyramid.cc  DescriptorSpin.cc  DescriptorSpinExact.cc  DescriptorSpinSimple.cc  DescriptorTextonScale.cc  DifferenceOfGaussians.cc  DoubleSize.cc  EntryDOG.cc  EntryFiniteDifference.cc  FilterHarris.cc  FilterHarrisEigen.cc  FilterHessian.cc  FiniteDifference.cc  (+58 more)
src/net/: CMakeLists.txt  Listener.cc  Makefile  Responder.cc  Server.cc  ServerTCP.cc  SocketStream.cc  net.vcproj  net7.vcproj  test.cc  testnet.vcproj  testnet7.vcproj
src/numeric/: Agglomerate.cc  AnnealingAdaptive.cc  AnnealingAdaptiveDouble.cc  AnnealingAdaptiveFloat.cc  CMakeLists.txt  ClusterMethod.cc  ConjugateGradientDouble.cc  ConjugateGradientFloat.cc  DimensionalityReduction.cc  FourierDouble.cc  FourierFloat.cc  GaussianMixture.cc  GaussianMixtureParallel.cc  GradientDescentDouble.cc  GradientDescentFloat.cc  KMeans.cc  KMeansParallel.cc  KMeansTree.cc  Kohonen.cc  LevenbergMarquardt.cc  LevenbergMarquardtBK.cc  LevenbergMarquardtDouble.cc  LevenbergMarquardtFloat.cc  LevenbergMarquardtMinpack.cc  LevenbergMarquardtSparseBK.cc  LevenbergMarquardtSparseBKDouble.cc  LevenbergMarquardtSparseBKFloat.cc  LevenbergMarquardtSparseCholesky.cc  LevenbergMarquardtSparseDouble.cc  LevenbergMarquardtSparseFloat.cc  LevenbergMarquardtSparseQR.cc  LineSearchDouble.cc  LineSearchFloat.cc  MDA.cc  Makefile  Matrix2x2Double.cc  Matrix2x2Float.cc  Matrix3x3Double.cc  Matrix3x3Float.cc  MatrixBlockDouble.cc  (+74 more)
src/util/: CMakeLists.txt  Makefile  addm.cc  convertall.cc  crypt.cc  epsall.cc  invert.cc  psnr.cc  stripm.cc  striputf8.cc  thumb.cc  timing.cc  vread.cc  xv.cc
